# CodeAnimator

./: .gitignore  CodeAnimator.py  Dockerfile  LICENSE  README.md
TestingScripts/: arrayInfo.cpp  example.py  notFibonacci.cpp  testcamera.gd
backend/: .gitignore  main.py  requirements.txt
bundled/: manim_runner.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/Components/: AnimationTypeSelector.jsx  ApiStatusBanner.jsx  ColorModal.jsx  ColorSettings.jsx  CommentSettings.jsx  FileUploadSection.jsx  LineGroupsSection.jsx  LineRangeSection.jsx  LoadingModal.jsx  OrientationToggle.jsx  PreviewModal.jsx  PreviewPanel.jsx  QualityPreset.jsx  SplitModal.jsx  SubmitSection.jsx  TimingSettings.jsx  VideoCompleteModal.jsx  index.js
frontend/src/Components/Landing/: CTAFooter.jsx  Comparison.jsx  Features.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  OpenSource.jsx  UsedIn.jsx  WhyIMadeThis.jsx  index.js
frontend/src/data/: constants.js  tokenizer.js
frontend/src/pages/: AppPage.jsx  DownloadsPage.jsx  LandingPage.jsx
frontend/src/styles/: Landing.css
frontend/src/utils/: functions.js
